argocd/platform/postgrest/envs/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgrest
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - postgrest.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: postgrest
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
